fixed Spinner not showing when `blockClickOn`=screen and fixed `transparent` prop

--- a/styles/colors-base.less
+++ b/styles/colors-base.less
@@ -395,8 +395,10 @@
 
 // Spinner
 // ---------------------------------------
-@agate-spinner-light-color: inherit;
+@agate-spinner-bg-color: @agate-gray;
 @agate-spinner-dark-color: inherit;
+@agate-spinner-light-color: inherit;
+@agate-spinner-transparent-bg-color: transparent;
 
 // Switch
 // ---------------------------------------
